--- a/nanofunds/app/home/home.html
+++ b/nanofunds/app/home/home.html
@@ -1,1 +1,93 @@
-﻿<h3>Loaded Up</h3>
+<div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center green-text text-lighten-1">Nano</h1>
+        <p>&nbsp;</p>
+        <div class="row center">
+         <!-- <h5 class="header col s12 light black-text">A modern responsive front-end framework based on Material Design</h5>-->
+        </div>
+        <div class="row center">
+          <a href="#" id="download-button" class="btn-large waves-effect waves-light green lighten-2">Sign Up</a>
+        </div>
+        <br><br>
+
+      </div>
+    </div>
+    <div class="parallax"><img src="../../img/background1.jpg" alt="Unsplashed background img 1"></div>
+  </div>
+
+
+  <div class="container">
+    <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center green-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">Stuf</h5>
+
+            <p class="light">MONEY</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center green-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">Stuf</h5>
+
+            <p class="light">Stuf</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center green-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Stuf</h5>
+
+            <p class="light">STuf</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">Stuf </h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="../../img/background2.jpg" alt="Unsplashed background img 2"></div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send green-text"></i></h3>
+          <h4>Our Model</h4>
+          <p class="left-align light">Stuf</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 light">Stuf</h5>
+        </div>
+      </div>
+    </div>
+    <div class="parallax"><img src="../../img/background3.png" alt="Unsplashed background img 3"></div>
+  </div>
