--- a/nanofunds/index.html
+++ b/nanofunds/index.html
@@ -1,17 +1,21 @@
 ﻿<!DOCTYPE html>
 <html ng-app="nano">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+<script src="/css/materialize.css"></script>
+<script src="/css/materialize.min.css"></script>
 <head>
     <title>Nano</title>
 	<meta charset="utf-8" />
 </head>
 <body id="Main" ng-controller="indexController">
-
-<!---->
-
 <div id="Menus" ng-include="'/app/nav/nav.html'" ng-controller="navController"></div>
 
 <div id="View" ng-view>
+
 </div>
+
+<div id="Menus" ng-include="'/app/footer/footer.html'"></div>
 <script src="/lib/jquery/jquery-2.1.1.min.js"></script>
 <script src="/lib/materialize/materialize.min.js"></script>
 <script src="/lib/angular/angular.min.js"></script>
@@ -25,11 +29,11 @@
 <script src="/app/nanoConfig.js"></script>
 
 <script src="/app/indexController.js"></script>
-    
-<script src="/app/nav/navController.js"></script> 
+
+<script src="/app/nav/navController.js"></script>
     <!--
 <script src="Scripts/app/common/factories/authenticationFactory.js"></script> -->
 <script src="/app/common/factories/httpInterceptorFactory.js"></script>
-        
+
 </body>
 </html>
