get it all together

--- a/nanofunds/app/home/home.html
+++ b/nanofunds/app/home/home.html
@@ -14,7 +14,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="../../img/background1.jpg" alt="Unsplashed background img 1"></div>
+    <div parallax class="parallax"><img src="../../img/background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -63,7 +63,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="../../img/background2.jpg" alt="Unsplashed background img 2"></div>
+    <div parallax class="parallax"><img src="../../img/background2.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -89,5 +89,5 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="../../img/background3.png" alt="Unsplashed background img 3"></div>
+    <div parallax class="parallax"><img src="../../img/background3.png" alt="Unsplashed background img 3"></div>
   </div>
