--- a/nanofunds/app/nav/nav.html
+++ b/nanofunds/app/nav/nav.html
@@ -8,6 +8,6 @@
      <ul id="nav-mobile" class="side-nav">
        <li><a href="#">Sign Up</a></li>
      </ul>
-     <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+     <!--<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>-->
    </div>
  </nav>
