some new content

--- a/nanofunds/app/home/home.html
+++ b/nanofunds/app/home/home.html
@@ -26,27 +26,24 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center green-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Stuf</h5>
-
-            <p class="light">MONEY</p>
+            <h5 class="center">The Problem</h5>
+            <p class="light">Managing and predicting cash flows are often a challenge for SMBs that have limited access to viable solutions</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center green-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">Stuf</h5>
-
-            <p class="light">Stuf</p>
+            <h5 class="center">What is <strong>Nano</strong></h5>
+            <p class="light"><strong>Nano</strong> allows SMBs to <strong>improve</strong> their <strong>cash</strong> management and unlock sources of working capital</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center green-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Stuf</h5>
-
-            <p class="light">STuf</p>
+            <h5 class="center">How Does <strong>Nano</strong> Do This</h5>
+            <p class="light"><strong>Nano</strong> captures basic purchase information to build a history to predict future cash inflows. Then&nbsp;<strong>Nano</strong> can then provide short term funding based upon these <strong>predictions</strong></p>
           </div>
         </div>
       </div>
