--- a/nanofunds/app/home/home.html
+++ b/nanofunds/app/home/home.html
@@ -25,24 +25,24 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center green-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">The Problem</h5>
+            <h2 class="center green-text"><em class="material-icons">The Problem</em></h2>
+            <!--<h5 class="center">The Problem</h5>-->
             <p class="light">Managing and predicting cash flows are often a challenge for SMBs that have limited access to viable solutions</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center green-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">What is <strong>Nano</strong></h5>
+            <h2 class="center green-text"><i class="material-icons">What is <strong>Nano</strong></i></h2>
+            <!--<h5 class="center">What is <strong>Nano</strong></h5>-->
             <p class="light"><strong>Nano</strong> allows SMBs to <strong>improve</strong> their <strong>cash</strong> management and unlock sources of working capital</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center green-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">How Does <strong>Nano</strong> Do This</h5>
+            <h2 class="center green-text"><i class="material-icons">How Does <strong>Nano</strong> Do This</i></h2>
+            <h5 class="center"></h5>
             <p class="light"><strong>Nano</strong> captures basic purchase information to build a history to predict future cash inflows. Then&nbsp;<strong>Nano</strong> can then provide short term funding based upon these <strong>predictions</strong></p>
           </div>
         </div>
@@ -69,8 +69,12 @@
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send green-text"></i></h3>
-          <h4>Our Model</h4>
-          <p class="left-align light">Stuf</p>
+          <h4>Does Nano support Omni-channel</h4>
+          <p class="left-align light"><strong>Yes</strong>. <strong>Nano</strong> works with <strong>First</strong> Data’s Clover solution for in-store transactions
+
+and <strong>Payeezy</strong> for online transactions to provide a single view of your in-store 
+
+and online purchases</p>
         </div>
       </div>
 
