--- a/nanofunds/dashBoard/graphs/line-customTooltips.html
+++ b/nanofunds/dashBoard/graphs/line-customTooltips.html
@@ -5,7 +5,10 @@
     <title>Line Chart with Custom Tooltips</title>
     <script src="../Chart.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
+    <script src="../../css/materialize.css"></script>
+    <script src="../../css/style.css"></script>
+    <script src="../../lib/materialize/materialize.js"></script>
+    <script src="../../lib/materialize/init.js"></script>
     <style>
     #canvas-holder1 {
         width: 300px;
