get base dashboard up

--- a/nanofunds/app/dashboard/dashboard.html
+++ b/nanofunds/app/dashboard/dashboard.html
@@ -1,8 +1,19 @@
 ﻿<section class="">
-    <article>
-        <canvas id="line" class="chart chart-line" chart-data="data"
-                chart-labels="labels" chart-legend="true" chart-series="series"
-                chart-click="onClick">
-        </canvas> 
+    <article class="row">
+        <h3>{{merchant.name}}</h3>
+        <div class="col s12">
+            <canvas id="line" class="chart chart-line" chart-data="data"
+                    chart-labels="labels" chart-legend="true" chart-series="series"
+                    chart-click="onClick">
+            </canvas>
+        </div>
+    </article>
+    <article class="row">
+        <div class="col s6">
+            side 1
+        </div>
+        <div class="col s6">
+            side 2
+        </div>
     </article>
 </section>
