--- a/nanofunds/app/dashboard/dashboard.html
+++ b/nanofunds/app/dashboard/dashboard.html
@@ -1,7 +1,7 @@
 ﻿<section class="">
     <article class="row">
-        <h3>{{merchant.name}}</h3>
         <div class="col s12">
+            <h4 class="pad-sm">{{merchant.name}}</h4>
             <canvas id="line" class="chart chart-line" chart-data="data"
                     chart-labels="labels" chart-legend="true" chart-series="series"
                     chart-click="onClick">
