--- a/nanofunds/app/AccountSetUp/CreationForm.html
+++ b/nanofunds/app/AccountSetUp/CreationForm.html
@@ -62,6 +62,9 @@
 <input type="checkbox" id="test5" />
 <label for="test5">I have read the tems and conditions and agree to all terms and conditions.</label>
 </p>
+<button class="btn waves-effect waves-light" type="submit" name="action">Submit
+  <i class="material-icons right">send</i>
+</button>
     </div>
   </div>
 </div>
