--- a/nanofunds/app/home/home.html
+++ b/nanofunds/app/home/home.html
@@ -56,7 +56,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Stuf </h5>
+          <h5 class="header col s12 light"> </h5>
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@
           <h4>Does Nano support Omni-channel</h4>
           <p class="left-align light"><strong>Yes</strong>. <strong>Nano</strong> works with <strong>First</strong> Data’s Clover solution for in-store transactions
 
-and <strong>Payeezy</strong> for online transactions to provide a single view of your in-store 
+and <strong>Payeezy</strong> for online transactions to provide a single view of your in-store
 
 and online purchases</p>
         </div>
@@ -86,7 +86,7 @@ and online purchases</p>
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Stuf</h5>
+          <h5 class="header col s12 light"></h5>
         </div>
       </div>
     </div>
