--- a/nanofunds/app/footer/footer.html
+++ b/nanofunds/app/footer/footer.html
@@ -8,8 +8,8 @@
         <div class="col l3 s12">
           <h5 class="white-text">Pages</h5>
           <ul>
-            <li><a class="white-text" href="#!">Clover</a></li>
-            <li><a class="white-text" href="#!">Hackathon.io</a></li>
+            <li><a class="white-text" href="">Clover</a></li>
+            <li><a class="white-text" href="">Hackathon.io</a></li>
            <!-- <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>-->
           </ul>
