--- a/nanofunds/app/nav/nav.html
+++ b/nanofunds/app/nav/nav.html
@@ -1,6 +1,6 @@
 <nav class="white" role="navigation">
    <div class="nav-wrapper container">
-     <a id="logo-container" href="" class="brand-logo"> <img src="../../img/NanoLogo.png" class="responsive-img"></a>
+     <a id="logo-container" href="" class="brand-logo"> <img src="../../img/NanoLogo.png" style="height: 40px;" class="responsive-img"></a>
      <ul class="right hide-on-med-and-down">
       <!-- <li><a href="#">Sign Up</a></li>-->
      </ul>
