add highlight to active tab

--- a/nanofunds/app/transactions/transactions.html
+++ b/nanofunds/app/transactions/transactions.html
@@ -2,7 +2,23 @@
     <article class="row" ng-if="true">
         <div class="col s12">
             <h4 class="pad-sm">Transaction History</h4>
-       
+            <table class="responsive-table striped">
+                <thead>
+                    <tr>
+                        <th data-field="id">Name</th>
+                        <th data-field="name">Item Name</th>
+                        <th data-field="price">Item Price</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>Alvin</td>
+                        <td>Eclair</td>
+                        <td>$0.87</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </article>
 </section>
